# SumPlayer-Tauri

./: .gitignore  FEATURES.md  diag_req.json  latest.json  package-lock.json  package.json  temp_check_player.js  temp_diag.js  temp_payload.json
src/: index.html  menu-overlay.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bookmark.rs  control_server.rs  download.rs  history.rs  main.rs  tab_manager.rs  window_state.rs
src-tauri/windows/: hooks.nsh
src/scripts/: browser-ui.js
src/styles/: browser.css
