[package]
name = "sumplayer-tauri"
version = "1.0.15"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = "0.4"
portable-pty = "0.8"
open = "5"
urlencoding = "2"
url = "2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_System_Com", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
